@@ -750,6 +750,7 @@
   "infra.doc.dc_command.security.scope.dropbox_business.sessions.modify": "Dropbox Business: View and manage your team's sessions, devices, and apps",
   "infra.doc.dc_command.security.scope.dropbox_business.sharing.read": "Dropbox Business: View your Dropbox sharing settings and collaborators",
   "infra.doc.dc_command.security.scope.dropbox_business.sharing.write": "Dropbox Business: View and manage your Dropbox sharing settings and collaborators",
+  "infra.doc.dc_command.security.scope.dropbox_business.team_data.content.read": "Dropbox Business: View content of your team's files and folders",
   "infra.doc.dc_command.security.scope.dropbox_business.team_data.member": "Dropbox Business: View structure of your team's and members' folders",
   "infra.doc.dc_command.security.scope.dropbox_business.team_data.team_space": "Dropbox Business: View and edit content of your team's files and folders",
   "infra.doc.dc_command.security.scope.dropbox_business.team_info.read": "Dropbox Business: View basic information about your team including names, user count, and team settings",
@@ -881,6 +882,8 @@
   "infra.doc.dc_supplemental.msg_dropbox_business.content_team_folder_operation_title": "Team folder operation commands",
   "infra.doc.dc_supplemental.msg_dropbox_business.content_team_folder_permission_info": "You can bulk add or delete members into team folders or sub-folders of a team folder through the below commands.",
   "infra.doc.dc_supplemental.msg_dropbox_business.content_team_folder_permission_title": "Team folder permission commands",
+  "infra.doc.dc_supplemental.msg_dropbox_business.content_team_space_operation_info": "Command for team space.",
+  "infra.doc.dc_supplemental.msg_dropbox_business.content_team_space_operation_title": "Team space commands",
   "infra.doc.dc_supplemental.msg_dropbox_business.content_title": "Team content commands",
   "infra.doc.dc_supplemental.msg_dropbox_business.doc_desc": "Dropbox Business commands",
   "infra.doc.dc_supplemental.msg_dropbox_business.file_lock_info": "File lock commands are capable of listing current file locks or releasing file locks as admin.",
@@ -2969,6 +2972,26 @@
   "recipe.teamfolder.replication.flag.src_peer_name": "Source team account alias",
   "recipe.teamfolder.replication.title": "Replicate a team folder to the other team",
   "recipe.teamfolder.title": "Team folder management",
+  "recipe.teamspace.asadmin.file.list.cli.args": "-path /DROPBOX/PATH/TO/LIST",
+  "recipe.teamspace.asadmin.file.list.flag.include_deleted": "Include deleted files",
+  "recipe.teamspace.asadmin.file.list.flag.include_explicit_shared_members": " If true, the results will include a flag for each file indicating whether or not that file has any explicit members.",
+  "recipe.teamspace.asadmin.file.list.flag.include_mounted_folders": " If true, the results will include entries under mounted folders which includes app folder, shared folder and team folder.",
+  "recipe.teamspace.asadmin.file.list.flag.path": "Path",
+  "recipe.teamspace.asadmin.file.list.flag.peer": "Account alias",
+  "recipe.teamspace.asadmin.file.list.flag.recursive": "List recursively",
+  "recipe.teamspace.asadmin.file.list.title": "List files and folders in team space run as admin",
+  "recipe.teamspace.asadmin.file.title": "File commands for team space run as admin",
+  "recipe.teamspace.asadmin.title": "Team space commands run as admin",
+  "recipe.teamspace.file.list.cli.args": "-path /DROPBOX/PATH/TO/LIST",
+  "recipe.teamspace.file.list.flag.include_deleted": "Include deleted files",
+  "recipe.teamspace.file.list.flag.include_explicit_shared_members": " If true, the results will include a flag for each file indicating whether or not that file has any explicit members.",
+  "recipe.teamspace.file.list.flag.include_mounted_folders": " If true, the results will include entries under mounted folders which includes app folder, shared folder and team folder.",
+  "recipe.teamspace.file.list.flag.path": "Path",
+  "recipe.teamspace.file.list.flag.peer": "Account alias",
+  "recipe.teamspace.file.list.flag.recursive": "List recursively",
+  "recipe.teamspace.file.list.title": "List files and folders in team space",
+  "recipe.teamspace.file.title": "File commands for team space",
+  "recipe.teamspace.title": "Team space commands",
   "recipe.title": "Tools for Dropbox and Dropbox Business",
   "recipe.util.archive.title": "Archive utility commands",
   "recipe.util.archive.unzip.cli.args": "-in /LOCAL/PATH/TO/ARCHIVE.zip -out /LOCAL/PATH/TO/EXTRACT",
