@@ -5,3 +5,4 @@
 ## Changes
 
 * #652 : File tidy utility
+* #624 : Team space commands
